Started the implementation of share file system.

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -5,3 +5,7 @@ validation.email.notBlank=Email is not blank.
 validation.email.notValid=Email is not valid.
 validation.password.notBlank=Password is not blank.
 validation.password.notValid=Password must be at least {min} and at most {max} characters.
+
+#Workbook
+workbook.io.error=Resource opening and closing error (Workbook).
+workbook.array.error=Error converting excel to byte array.
