Set validation for controllers.

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -6,6 +6,33 @@ validation.email.notValid=Email is not valid.
 validation.password.notBlank=Password is not blank.
 validation.password.notValid=Password must be at least {min} and at most {max} characters.
 
+#Validation Procedure Type
+validation.procedure.type.name.notBlank=Name is not blank.
+validation.procedure.type.percentage.notNull=Percentage is not null.
+validation.procedure.type.percentage.min=Percentage below the minimum.
+validation.procedure.type.user.notNull=User ID is not null.
+validation.procedure.type.id.notNull=Procedure type ID is not null.
+validation.procedure.type.id.positive=Procedure Type ID is not negative.
+
+#Validation Procedure
+validation.procedure.date.notNull=Date is not null.
+validation.procedure.date.pastOrPresent=Registration date is greater than today.
+validation.procedure.customer.notEmpty=Customer is not empty.
+validation.procedure.value.notNull=Value is not null.
+validation.procedure.user.notNull=User ID is not null.
+validation.procedure.month.positive=Month is not negative.
+validation.procedure.year.positive=Year is not negative.
+validation.procedure.user.positive=User ID is not negative.
+
+#Validation Share
+validation.share.extension.notNull=Extension is not null.
+validation.share.month.positive=Month is not negative.
+validation.share.year.positive=Year is not negative.
+validation.share.user.positive=User ID is not negative.
+validation.share.user.notNull=User ID is not null.
+validation.share.month.notNull=Month is not null.
+validation.share.year.notNull=Year is not null.
+
 #Workbook
 workbook.io.error=Resource opening and closing error (Workbook).
 workbook.array.error=Error converting excel to byte array.
