--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -4,7 +4,7 @@ validation.user.surname.notBlank=Surname is not blank.
 validation.email.notBlank=Email is not blank.
 validation.email.notValid=Email is not valid.
 validation.password.notBlank=Password is not blank.
-validation.password.notValid=Password must be at least {min} and at most {max} characters.
+validation.password.notValid=Password must contain at least {min} characters.
 
 #Validation Procedure Type
 validation.procedure.type.name.notBlank=Name is not blank.
