--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,6 @@ info:
     version: '@project.version@'
     java:
       version: '@java.version@'
+
+security:
+  secret_key: 8ae1626b-7f9f-48c1-820d-7e23c164ddae
