--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.procedure.manager</groupId>
 	<artifactId>proceduremanager</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0</version>
 	<name>Procedure Manager API</name>
 	<description>Gerenciador de procedimentos com ganho em comissão.</description>
 	<properties>
@@ -18,6 +18,15 @@
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.xhtmlrenderer</groupId>
+			<artifactId>flying-saucer-pdf</artifactId>
+			<version>9.1.20</version>
+		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
